--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "recipe-book",
   "version": "0.1.0",
+  "engines": {
+    "node": "v13.11.0"
+  },
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
