--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "recipe-book",
   "version": "0.1.0",
   "engines": {
-    "node": "v13.11.0"
+    "node": "v13.11.0",
+    "npm": "6.13.7"
   },
   "private": true,
   "dependencies": {
