--- a/app.json
+++ b/app.json
@@ -9,7 +9,11 @@
   "scripts": {
     "postdeploy": ""
   },
-  "env": {},
+  "env": {
+    "REACT_APP_AUTH0_DOMAIN": "$AUTH0_DOMAIN",
+    "REACT_APP_AUTH0_CLIENT_ID": "$AUTH0_CLIENT_ID",
+    "REACT_APP_AUTH0_AUDIENCE": "$AUTH0_AUDIENCE"
+  },
   "addons": [
     {
       "plan": "auth0",
@@ -25,6 +29,5 @@
     {
       "url": "heroku/nodejs"
     }
-  ],
-  "environments": {}
+  ]
 }
