--- a/app.json
+++ b/app.json
@@ -9,19 +9,8 @@
   "scripts": {
     "postdeploy": ""
   },
-  "env": {
-    "REACT_APP_AUTH0_DOMAIN": "$AUTH0_DOMAIN",
-    "REACT_APP_AUTH0_CLIENT_ID": "$AUTH0_CLIENT_ID",
-    "REACT_APP_AUTH0_AUDIENCE": "$AUTH0_AUDIENCE"
-  },
-  "addons": [
-    {
-      "plan": "auth0",
-      "options": {
-        "type": "nodejs"
-      }
-    }
-  ],
+  "env": {},
+  "addons": [],
   "buildpacks": [
     {
       "url": "https://github.com/mars/create-react-app-inner-buildpack"
