--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "postdeploy": ""
   },
   "env": {
-    "GOOGLE_FOLDER_ID": "1l6kXQ7exsaFIcaZlqiQgm7GCXEq9QWKw"
+    "GOOGLE_DRIVE_FOLDER_ID": "1l6kXQ7exsaFIcaZlqiQgm7GCXEq9QWKw"
   },
   "addons": [],
   "buildpacks": [
@@ -24,7 +24,7 @@
   "environments": {
     "review": {
       "env": {
-        "GOOGLE_FOLDER_ID": "1Owjk4ENCCLGASQzdH-ieOB_sU2RauakR"
+        "GOOGLE_DRIVE_FOLDER_ID": "1Owjk4ENCCLGASQzdH-ieOB_sU2RauakR"
       }
     }
   }
