Setup review apps (#1)
Export config to env variables & add app.json to configure review apps

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/setupCredentials.js && node server",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "server": "node server"
   },
   "cacheDirectories": [
     "node_modules",
@@ -16,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "express-jwt-authz": "^2.3.1",
