--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dropzone": "^11.0.1",
     "react-images-upload": "^1.2.8",
     "react-input-autosize": "^2.2.2",
+    "react-photo-collage": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tagsinput": "^3.19.0",
