--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@uiw/react-md-editor": "^1.14.6",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.1",
@@ -22,6 +24,8 @@
     "react-dropzone": "^11.0.1",
     "react-images-upload": "^1.2.8",
     "react-input-autosize": "^2.2.2",
+    "react-markdown": "^5.0.3",
+    "react-photo-collage": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tagsinput": "^3.19.0",
