--- a/client/package.json
+++ b/client/package.json
@@ -8,20 +8,16 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
-    "@uiw/react-md-editor": "^1.14.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
-    "react-images-upload": "^1.2.8",
-    "react-input-autosize": "^2.2.2",
     "react-markdown": "^5.0.3",
+    "react-mde": "^11.0.0",
     "react-photo-collage": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-tagsinput": "^3.19.0",
     "react-uuid": "^1.0.2",
-    "reactjs-tag-input": "^2.0.15",
     "restful-react": "^12.0.0",
     "styled-components": "^5.1.0",
     "yargs-parser": "^18.1.3"
@@ -58,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "8.1.0",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^4.7.0",
