--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
+    "react-is": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-mde": "^11.0.0",
     "react-photo-collage": "^1.0.7",
