--- a/client/package.json
+++ b/client/package.json
@@ -1,67 +1,60 @@
 {
-  "name": "recipe-book",
+  "name": "book-of-gloop-ui",
   "version": "0.1.0",
   "engines": {
-    "node": "13.11.0",
-    "npm": "6.13.7"
+    "node": "15.3.0",
+    "npm": "7.0.14"
   },
   "private": true,
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.7.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.1",
-    "react-is": "^17.0.1",
-    "react-markdown": "^5.0.3",
-    "react-mde": "^11.0.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "@auth0/auth0-spa-js": "^1.19.4",
+    "@emotion/react": "^11.7.1",
+    "@rebass/forms": "^4.0.6",
+    "formik": "^2.2.9",
+    "formik-persist": "^1.1.0",
+    "immutable": "^4.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.14.0",
+    "react-dropzone": "^11.5.1",
+    "react-is": "^16.13.1",
+    "react-markdown": "^8.0.0",
+    "react-mde": "11.0.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^3.0.0",
     "react-uuid": "^1.0.2",
-    "restful-react": "^12.0.0",
-    "styled-components": "^5.2.1",
-    "yargs-parser": "^18.1.3"
+    "rebass": "^4.0.7",
+    "restful-react": "^15.9.4",
+    "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
+    "styled-system": "^5.1.5",
+    "theme-ui": "^0.13.1",
+    "yargs-parser": "^9.0.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
+    "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "proxy": "http://localhost:3000",
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.18",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "8.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier-eslint": "^9.0.1"
+    "@storybook/addon-actions": "6.1.21",
+    "@storybook/addon-essentials": "6.1.21",
+    "@storybook/addon-links": "6.1.21",
+    "@storybook/node-logger": "6.1.21",
+    "@storybook/preset-create-react-app": "3.1.6",
+    "@storybook/react": "6.1.21"
   }
 }
